# calm-aurora

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  ingest_cidoc.py  pyproject.toml  requirements.txt  retrieve_cidoc.py  smoke_test.py
.github/workflows/: ci.yml
data/smoke/: cidoc_sample.json
data/smoke/vectorstore/: cidoc.index
src/cidoc_rag/: __init__.py  config.py  utils.py
src/cidoc_rag/agent/: __init__.py  policy.py
src/cidoc_rag/cli/: app_cli.py  chat_runtime.py  ingest_cli.py  retrieve_cli.py
src/cidoc_rag/clients/: __init__.py  ollama_client.py
src/cidoc_rag/embeddings/: service.py
src/cidoc_rag/exporters/: __init__.py  service.py
src/cidoc_rag/generation/: service.py
src/cidoc_rag/ingestion/: loader.py  normalize.py  pipeline.py
src/cidoc_rag/prompting/: __init__.py  builders.py  modes.py
src/cidoc_rag/retrieval/: service.py
src/cidoc_rag/vectorstore/: faiss_store.py
tests/: test_agent_policy.py  test_app_chat_loop.py  test_app_cli.py  test_context_builder.py  test_export_commands.py  test_generation_routing.py  test_mode_detection.py  test_normalization.py  test_prompt_templates.py  test_rdf_loader.py  test_retrieval_alignment.py  test_text_loader.py
